# fooSAT

./: CMakeLists.txt  README.md  cnf.cnf  hc-4.col  main.cc
concept/: encoding.tex
foo/: Parse.cc  Parse.h
minisat/core/: Dimacs.h  Solver.cc
minisat/mtl/: Map.h
minisat/utils/: Options.h  System.cc
